--- a/index.html
+++ b/index.html
@@ -111,10 +111,8 @@
                         <div class="about__info">
                             <img src="assets/media/react-svgrepo-com.svg" alt="">
                             <img src="assets/media/tailwind-svgrepo-com.svg" alt="">
-                            <img src="assets/media/nodejs-svgrepo-com.svg" alt="">
                             <img src="assets/media/python-127-svgrepo-com.svg" alt="">
                             <img src="assets/media/firebase-svgrepo-com.svg" alt="">
-                            <img src="assets/media/sass-svgrepo-com.svg" alt="">
                             <img src="assets/media/mysql-svgrepo-com.svg" alt="">
                         </div>
                         <div class="about__buttons">
@@ -209,31 +207,7 @@
                     <div class="swiper-wrapper">
                         <!-- project1 -->
                         <div class="portfolio__content grid swiper-slide">
-                            <img src="assets/media/zeus.webp" alt="" class="portfolio__img">
-                            <div class="portfolio__data">
-                                <h3 class="portfolio__title">Zeus Tech</h3>
-                                <p class="portfolio__description">An AI powered application which allows us to convert the .tif images clicked by the drone and convert them into thermal spectral images</p>
-                                <a href="https://github.com/Sawantkun/hackathon" target="_blank" class="button button--flex button--small portfolio__button">
-                                    Github
-                                    <i class="uil uil-arrow-right button__icon"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="portfolio__content grid swiper-slide">
-                            <img src="assets/media/friendd.webp" alt="" class="portfolio__img">
-                            <div class="portfolio__data">
-                                <h3 class="portfolio__title">Frienducation</h3>
-                                <p class="portfolio__description">A go to one step solution for the startup Frienducation for registering students, selling courses, etc.</p>
-                                <a href="https://github.com/ankit-superuser/research-byLearning" target="_blank" class="button button--flex button--small portfolio__button">
-                                    Github
-                                    <i class="uil uil-arrow-right button__icon"></i>
-                                </a>
-                            </div>
-                        </div>
-                        <!-- project2 -->
-                        <!-- project3 -->
-                        <div class="portfolio__content grid swiper-slide">
-                            <img src="assets/media/technooo.webp" alt="" class="portfolio__img">
+                            <img src="assets/media/codefellas.jpg" alt="" class="portfolio__img">
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Code Fellas 2022</h3>
                                 <p class="portfolio__description">Hackathon website built for serving the purpose of the event for the tch club in my college GBU</p>
@@ -243,6 +217,20 @@
                                 </a>
                             </div>
                         </div>
+                        <!-- project2 -->
+                        <div class="portfolio__content grid swiper-slide">
+                            <img src="assets/media/Login-page.jpg" alt="" class="portfolio__img">
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Login-Signup Page</h3>
+                                <p class="portfolio__description">user-friendly login/signup pages using Java Swing and JFrame technologies</p>
+                                <a href="https://github.com/ankit-superuser/Login-Signup-form" target="_blank" class="button button--flex button--small portfolio__button">
+                                    Github
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        
+                        <!-- project3 -->
                     </div>
                     <div class="swiper-button-prev previous">
                         <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
